--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- Hero -->
     <section id="home" class="home container">
         <div class="content">
-            <video src="Logo video1.mp4" autoplay muted loop playsinline poster="banner-poster.jpg"
+            <video src="logo video1.mp4" autoplay muted loop playsinline poster="banner-poster.jpg"
                 style="border: none;" id="myVideo"></video>
             <div class="ticker" aria-label="Event ticker"><span> your stage, your story, your innovation — this is
                     Epistemicon! • your stage, your story, your innovation — this is Epistemicon! • </span></div>
@@ -256,5 +256,6 @@
         <!-- Bootstrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 
 </html>
