--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 
   <!-- Countdown -->
   <section class="countdown-section container" aria-labelledby="countdown-title">
-    <h1 id="countdown-title">⏳ Countdown to Epistemicon 2K25 🎉</h1>
+    <h1 id="countdown-title">⏳ Countdown to Epistemicon 2K25 <span
+        style="color: #EE0548; font-weight: 700; font-size: 2rem;"> (20/09/25) </span>🎉 </h1>
     <div class="countdown-grid" aria-live="polite" aria-atomic="true">
       <div class="time-box">
         <h2 id="days">00</h2>
@@ -247,11 +248,41 @@
         referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <div class="location-details">
-      <p>The event venue is located at:</p>
+      <p>Please refer to the map above for directions and location details:</p>
       <p>GM55+CCQ, ITI Rd, Beside Ramesh Hospital, Jayaprakash Nagar, Vijayawada, Andhra Pradesh 520008</p>
-      <p>Please refer to the map above for directions and location details.</p>
+      <!-- <p>Please refer to the map above for directions and location details.</p> -->
     </div>
   </section>
+
+
+  <section class="team" id="team">
+
+    <div class="heading" style="margin: 1rem;">
+      <h1>Organised by Department of CSE</h1>
+      <img src="" alt="">
+    </div>
+
+    <div class="box-container">
+      <div class="box">
+        <img src="cselogo.jpg" alt="">
+        <h3>CSE Department</h3>
+        <span>ALIET</span>
+
+        <div class="share">
+          <a href="https://www.youtube.com/@alietcseofficial" target="_blank"><i class="fab fa-youtube"></i></a>
+
+          <a href="https://www.instagram.com/aliet_cse_connect/?igsh=YmVscXAwdTFtOTZ2#" target="_blank"><i
+              class="fab fa-instagram"></i></a>
+          <a href="https://www.linkedin.com/posts/aliet-cse-network_epistemicon2k24-aliet-cse-activity-7367381868054237185-Lc7E?utm_source=share&utm_medium=member_android&rcm=ACoAAD12y6EBCLhllJXZ8mEBTnKJCtYcOOeAqZQ"
+            target="_blank"><i class="fab fa-linkedin-in"></i></a>
+          <a href="https://www.facebook.com/share/1Gdweyrife/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+        </div>
+      </div>
+
+    </div>
+
+  </section>
+
 
   <!-- Contact -->
   <section class="contact" id="contact">
@@ -271,16 +302,16 @@
 
       <div class="inputRow">
         <select name="Department" id="eventdd">
-          <option value="">--Select Event you want to participate--</option>
+          <option value="">--Select Your Department--</option>
           <option value="CSE">CSE</option>
           <option value="ECE">ECE</option>
           <option value="EEE">EEE</option>
           <option value="CIVIL">CIVIL</option>
-          <option value="MECHANICAL">MECHANICAL</option>
+          <option value="MECH">MECHANICAL</option>
           <option value="CSM">CSM</option>
           <option value="CSD">CSD</option>
         </select>
-      
+
         <select name="event" id="eventdd">
           <option value="Project Expo">--Select Event you want to participate--</option>
           <option value="Project Expo">Project Expo</option>
@@ -318,9 +349,9 @@
 
       <div class="footer-info">
         <p>&copy; 2025 Epistemicon | All rights reserved</p>
-        <p>Developed by: Jakir, Chaitanya, Ahmad Javed</p>
-        <p><i class="fas fa-map-marker-alt"></i>Andhra Loyola Institute of Engineering & Technology,Vijayawada,Andhra
-          Pradesh India</p>
+        <!-- ~  !1111 11                                                                                                                              11  a             <p>Developed by: Jakir, Chaitanya, Ahmad Javed</p> -->
+        <p> <a href="http://aliet.ac.in/" target="_blank"> <i class="fas fa-map-marker-alt"></i>Andhra Loyola Institute of Engineering & Technology,Vijayawada,Andhra
+          Pradesh India </a></p>
       </div>
 
     </div>
