--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </div>
   </section>
 
-  <section class="brochure" style="display: flex; justify-content: center;">
+  <section class="brochure">
     <img src="brochure.jpg" alt="Epistemicon Brochure" class="broch">
   </section>
 
