temp save before filter-branch

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <!-- Hero -->
   <section id="home" class="home container">
     <div class="content">
-      <video src="logo video1.mp4" autoplay muted loop playsinline poster="banner-poster.jpg" style="border: none;"
+      <video src="https://res.cloudinary.com/dcmt06mac/video/upload/v1756913687/logo_video1_jy0jpx.mp4" autoplay muted loop playsinline poster="banner-poster.jpg" style="border: none;"
         id="myVideo"></video>
       <div class="ticker" aria-label="Event ticker"><span> your stage, your story, your innovation — this is
           Epistemicon! • your stage, your story, your innovation — this is Epistemicon! • </span></div>
@@ -267,46 +267,46 @@
     <!-- Video Gallery -->
     <div class="d-flex flex-row flex-nowrap overflow-auto gap-3 pb-3">
       <!-- Video Card -->
-      <div class="card video-card shadow-sm rounded-3" style="min-width: 250px;">
-        <div class="video-thumb" data-video="epistemicon-2k25.mp4">
+      <div class="card video-card shadow-sm rounded-3" style="min-width: 250px;" data-aos="fade-up">
+        <div class="video-thumb" data-video="https://res.cloudinary.com/dcmt06mac/video/upload/v1756911137/epistemicon-2k25_doeqgf.mp4">
           <img src="17.jpeg" class="card-img-top rounded-top" alt="Promo Video 1">
           <div class="overlay"><span class="play-icon">▶</span></div>
         </div>
         <div class="card-body text-center">
           <h6 class="card-title">Highlights of Epistemicon-2k24</h6>
-          <button class="btn btn-primary btn-sm video-btn" data-video="epistemicon-2k25.mp4">▶ Click to Watch</button>
+          <button class="btn btn-primary btn-sm video-btn" data-video="https://res.cloudinary.com/dcmt06mac/video/upload/v1756911137/epistemicon-2k25_doeqgf.mp4">▶ Click to Watch</button>
         </div>
       </div>
 
-      <div class="card video-card shadow-sm rounded-3" style="min-width: 250px;">
-        <div class="video-thumb" data-video="logo video1.mp4">
+      <div class="card video-card shadow-sm rounded-3" style="min-width: 250px;" data-aos="fade-up">
+        <div class="video-thumb" data-video="https://res.cloudinary.com/dcmt06mac/video/upload/v1756913687/logo_video1_jy0jpx.mp4">
           <img src="event_logo1.png" class="card-img-top rounded-top" alt="Aftermovie">
           <div class="overlay"><span class="play-icon">▶</span></div>
         </div>
         <div class="card-body text-center">
           <h6 class="card-title">Logo Video</h6>
-          <button class="btn btn-primary btn-sm video-btn" data-video="logo video1.mp4">▶ Click to Watch</button>
+          <button class="btn btn-primary btn-sm video-btn" data-video="https://res.cloudinary.com/dcmt06mac/video/upload/v1756913687/logo_video1_jy0jpx.mp4">▶ Click to Watch</button>
         </div>
       </div>
 
-      <div class="card video-card shadow-sm rounded-3" style="min-width: 250px;">
-        <div class="video-thumb" data-video="version1.mp4">
+      <div class="card video-card shadow-sm rounded-3" style="min-width: 250px;" data-aos="fade-up">
+        <div class="video-thumb" data-video="https://res.cloudinary.com/dcmt06mac/video/upload/v1756910896/version1_yjbrso.mp4">
           <img src="3v.jpeg" class="card-img-top rounded-top" alt="Teaser">
           <div class="overlay"><span class="play-icon">▶</span></div>
         </div>
         <div class="card-body text-center">
           <h6 class="card-title">✨ALIET – Empowering Young Minds, Shaping Futures</h6>
-          <button class="btn btn-primary btn-sm video-btn" data-video="version1.mp4">▶ Click to Watch</button>
+          <button class="btn btn-primary btn-sm video-btn" data-video="https://res.cloudinary.com/dcmt06mac/video/upload/v1756910896/version1_yjbrso.mp4">▶ Click to Watch</button>
         </div>
       </div>
-      <div class="card video-card shadow-sm rounded-3" style="min-width: 250px;">
-        <div class="video-thumb" data-video="4v.mp4">
+      <div class="card video-card shadow-sm rounded-3" style="min-width: 250px;" data-aos="fade-up">
+        <div class="video-thumb" data-video="https://res.cloudinary.com/dcmt06mac/video/upload/v1756909186/4v_1_tl9jux.mp4">
           <img src="p4.jpeg" class="card-img-top rounded-top" alt="Teaser">
           <div class="overlay"><span class="play-icon">▶</span></div>
         </div>
         <div class="card-body text-center">
           <h6 class="card-title">Faculty Exchange Program</h6>
-          <button class="btn btn-primary btn-sm video-btn" data-video="4v.mp4">▶ Click to Watch</button>
+          <button class="btn btn-primary btn-sm video-btn" data-video="https://res.cloudinary.com/dcmt06mac/video/upload/v1756909186/4v_1_tl9jux.mp4">▶ Click to Watch</button>
         </div>
       </div>
 
@@ -385,7 +385,7 @@
     <form action="" method="post" class="contact-form" name="contact-form">
       <div class="inputRow">
         <input type="text" name="Name" placeholder="Your name" autocomplete="name" required>
-        <input type="number" name="Number" placeholder="Your number" autocomplete="tel">
+        <input type="number" name="Number" placeholder="Mobile number" autocomplete="tel">
       </div>
 
       <div class="inputRow">
@@ -419,7 +419,7 @@
           <div class="heading">
             <h3>Select Events you want to participate</h3>
           </div>
-          <div class="events1" style="margin-left: 1rem;   text-align: left;">
+          <div class="events1" style="margin-left: 1rem; text-align: left;">
             <label><input type="checkbox" name="event" value="Project Expo" style="width: auto;"> Project
               Expo</label><br>
             <label><input type="checkbox" name="event" value="Paper Presentation" style="width: auto;"> Paper
@@ -460,7 +460,7 @@
 
       <div class="footer-info">
         <p>&copy; 2025 Epistemicon | All rights reserved</p>
-        <!-- ~  !1111 11                                                                                                                              11  a             <p>Developed by: Jakir, Chaitanya, Ahmad Javed</p> -->
+        <p>Developed by: Department of CSE ( AhmadJaved, Jakir, Chaitanya )</p>
         <p> <a href="http://aliet.ac.in/" target="_blank"> <i class="fas fa-map-marker-alt"></i>Andhra Loyola Institute
             of Engineering & Technology,Vijayawada,Andhra
             Pradesh India </a></p>
@@ -486,8 +486,8 @@
   <!-- script for custom js -->
   <script>
 
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbyPKEHoC6XNBv71I4a26ZlV5GHSVApCj2w0Oq6sx34ymTTm0iOwJm4aZ6V6ZykHKDultg/exec'
-
+    // const scriptURL = 'https://script.google.com/macros/s/AKfycbyPKEHoC6XNBv71I4a26ZlV5GHSVApCj2w0Oq6sx34ymTTm0iOwJm4aZ6V6ZykHKDultg/exec'
+ const scriptURL = 'https://script.google.com/macros/s/AKfycbyCaDB9etpM6QZ3c6X-noSCIRJOZXlfJv-OY9PtS-rJ21YvxRKyhtZEGUTuLXcUslRu/exec'
     const form = document.forms['contact-form']
 
     form.addEventListener('submit', e => {
