--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
 
       <div class="footer-info">
         <p>&copy; 2025 Epistemicon | All rights reserved</p>
-        <p>Developed by: Department of CSE ( AhmadJaved, Jakir, Chaitanya )</p>
+        <p>Developed by: Department of CSE</p>
         <p> <a href="http://aliet.ac.in/" target="_blank"> <i class="fas fa-map-marker-alt"></i>Andhra Loyola Institute
             of Engineering & Technology,Vijayawada,Andhra
             Pradesh India </a></p>
