--- a/index.html
+++ b/index.html
@@ -420,15 +420,15 @@
             <h3>Select Events you want to participate</h3>
           </div>
           <div class="events1" style="margin-left: 1rem; text-align: left;">
-            <label><input type="checkbox" name="event" value="Project Expo" style="width: auto;"> Project
+            <label><input type="checkbox" name="event[]" value="Project Expo" style="width: auto;"> Project
               Expo</label><br>
-            <label><input type="checkbox" name="event" value="Paper Presentation" style="width: auto;"> Paper
+            <label><input type="checkbox" name="event[]" value="Paper Presentation" style="width: auto;"> Paper
               Presentation</label><br>
-            <label><input type="checkbox" name="event" value="Poster Presentation" style="width: auto;"> Poster
+            <label><input type="checkbox" name="event[]" value="Poster Presentation" style="width: auto;"> Poster
               Presentation</label><br>
-            <label><input type="checkbox" name="event" value="Technical Quiz" style="width: auto;"> Technical
+            <label><input type="checkbox" name="event[]" value="Technical Quiz" style="width: auto;"> Technical
               Quiz</label><br>
-            <label><input type="checkbox" name="event" value="Spot Events" style="width: auto;"> Spot Events</label><br>
+            <label><input type="checkbox" name="event[]" value="Spot Events" style="width: auto;"> Spot Events</label><br>
           </div>
         </div>
 
