--- a/index.html
+++ b/index.html
@@ -54,11 +54,15 @@
     </div>
   </section>
 
+  <section class="date" style="margin-top: 2rem;"> 
+    <div class="box">
+      20.09.2025
+    </div>
+  </section>
 
   <!-- Countdown -->
   <section class="countdown-section container" aria-labelledby="countdown-title">
-    <h1 id="countdown-title">⏳ Countdown to Epistemicon 2025 <span
-        style="color: #EE0548; font-weight: 700; font-size: 2rem;"> (20/09/25) </span>🎉 </h1>
+    <h1 id="countdown-title">⏳ Countdown to Epistemicon 2025 🎉 </h1>
     <div class="countdown-grid" aria-live="polite" aria-atomic="true">
       <div class="time-box">
         <h2 id="days">00</h2>
